[tool.poetry]
name = "python-design-patterns"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johan.vergeer@ordina.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^3.7.4"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
sphinx = "^2.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
